2003-06-09  Luc Teirlinck  <teirllm@mail.auburn.edu>

	* bindings.el (global-map): Bind `kill-whole-line' to
	C-S-<backspace>.  Remove M-S-<backspace> binding: too close to
	C-M-<backspace>.

	* dired.el (dired-re-dot): Make it handle trailing /.
	(dired-get-filename): Update documentation string.
	Revert previous change and fix typo in earlier version.

2003-06-10  Kim F. Storm  <storm@cua.dk>

	* info.el (Info-fontify-node): Make `invisible' property
	non-sticky so that whitespace added by filling stays visible.
	Make refilling less agressive by starting at beginning of current
	line rather than beginning of current paragraph.

2003-06-09  Andreas Schwab  <schwab@suse.de>

	* dired.el (dired-get-filename): Complain only about "." and "..",
	not all directories.

2003-06-08  Nick Roberts  <nick@nick.uklinux.net>

	* gdb-ui.el (gdb-get-current-frame, gdb-frame-handler): Use Gdb
	command `info frame' instead of `frame' to preserve point.
	(gdb-invalidate-assembler): Only run disassemble again if frame
	has changed.
	(gdb-append-to-inferior-io): Revert change from 2003-05-17.

2003-06-07  Stefan Monnier  <monnier@cs.yale.edu>

	* textmodes/texinfo.el (texinfo-enable-quote-macros): Fix thinko.
	(texinfo-insert-@table): Remove unused arg.
	(texinfo-show-structure): Remove unused var `source-buffer'.

	* info.el (Info-goto-node, Info-follow-reference, Info-menu-update)
	(Info-fontify-node): Don't search past header-end.
	Use match-string and line-end-position.

	* skeleton.el (skeleton-proxy-new): Consume the mark-active state.

	* textmodes/tex-mode.el (tex-mode-syntax-table)
	(tex-latex-indent-syntax-table): Don't use easy-mmode-defsyntax.

2003-06-07  Jason Rumney  <jasonr@gnu.org>

	* mwheel.el (mouse-wheel-up-event, mouse-wheel-down-event):
	Use wheel-* events on darwin.

2003-06-06  Era Eriksson  <era@iki.fi>  (tiny change)

	* shell.el (shell-resync-dirs): Tolerate an extra line of output
	before the list of directories from `shell-dirstack-query' (it